--- a/application-production.yml
+++ b/application-production.yml
@@ -1,1 +1,12 @@
 
+spring:
+ application:
+  name: Config-prod 
+eureka:
+ instance:
+ prefer-ip-address: true
+client:
+fetch-registry: true
+registry-with-eureka: true
+service-uri:
+ defaultZone: http://localhost:8761/eureka
